# kAI

./: .env.example  .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  DECISIONS.md  PROJECT_KNOWLEDGE.txt  README.md  SESSION_HANDOFF.md  main.py  plugins.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  lint.yml  secret-scan.yml
config/: design_params.yaml  taxonomy.yaml
scripts/: install_hooks.sh  pre-commit  rollout.sh  setup.sh  validate.sh
src/kai/: __init__.py  cli.py  plugin_base.py  shared.py
src/kai/design/: __init__.py  cbc_generator.py  design_diagnostics.py  maxdiff_generator.py  plugin.py
src/kai/diagnostics/: __init__.py  consistency.py  convergence.py  quality_gate.py  stability.py
src/kai/elicitation/: __init__.py  adaptive.py  api.py  plugin.py  session.py
src/kai/estimation/: __init__.py  ensemble.py  maxdiff_estimator.py  mnl.py  plugin.py  rating_calibrator.py  types.py
src/kai/profile/: __init__.py  differ.py  exporter.py  generator.py  plugin.py
src/kai/storage/: __init__.py  models.py  plugin.py  repository.py
src/kai/taxonomy/: __init__.py  loader.py  plugin.py  schema.py
tests/unit/: test_cbc_generator.py  test_design_diagnostics.py  test_main_lifecycle.py  test_plugins_registry.py  test_shared_helpers.py  test_shared_uniqueness.py  test_taxonomy_loader.py  test_taxonomy_schema.py  test_validate_script_lint_parity.py
