[project]
name = "kai"
version = "0.1.4"
description = "kAI — conjoint-based preference elicitation engine for engineering tenet quantification"
requires-python = ">=3.11"
authors = [{name = "kAI"}]

# Pinned for reproducibility (tenet #4: organized; tenet #1: scalable)
dependencies = [
    # Core API
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",

    # Storage
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",

    # Estimation (MNL via scipy/statsmodels)
    "numpy==2.1.3",
    "scipy==1.14.1",
    "pandas==2.2.3",
    "statsmodels==0.14.4",
    "scikit-learn==1.5.2",

    # Design generation (orthogonal arrays, balanced designs)
    "pyDOE3==1.0.4",

    # CLI
    "typer==0.12.5",
    "rich==13.9.4",
]

[project.optional-dependencies]
# Dev tooling
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "httpx==0.27.2",  # FastAPI test client
]

[project.scripts]
kai = "kai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=kai --cov-report=term-missing"

[tool.mypy]
strict = true
python_version = "3.11"
